--- a/action.yml
+++ b/action.yml
@@ -11,25 +11,32 @@ runs:
   using: 'composite'
   steps:
     - uses: VisiumCH/checkout@v2
+      shell: bash
     - name: Set up Python 3.10
       uses: VisiumCH/setup-python@v2
       with:
         python-version: "3.10"
+      shell: bash
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install pipenv
         pipenv install --dev --system --deploy
+      shell: bash
     - name: Check formatting
       run: |
         black --check .
         isort --check --gitignore .
+      shell: bash
     - name: Lint with Pylint
       run: |
         pylint . --recursive=y
+      shell: bash
     - name: Check doc style with pydocstyle
       run: |
         pydocstyle
+      shell: bash
     - name: Check that all functions are type annotated
       run: |
         ! mypy . --disallow-untyped-defs --disallow-incomplete-defs | grep "Function is missing" || false
+      shell: bash
