--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,11 @@ name = "pypi"
 [packages]
 
 [dev-packages]
+black = "*"
+isort = "*"
+pylint = "*"
+mypy = "*"
+pydocstyle = "*"
 
 [requires]
 python_version = "3.10"
