--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,8 @@ runs:
 
     - name: Install dependencies
       run: |
+        eval `ssh-agent -s`
+        ssh-add - <<< '${{ secrets.CHECK_PYTHON_STYLE_SSH_PRIVATE_KEY }}'
         python -m pip install --upgrade pip
         python -m pip install pipenv
         pipenv install --dev --system --deploy
