--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - uses: VisiumCH/check-python-style@${{ github.sha }}
+      - uses: "VisiumCH/check-python-style@${GITHUB_SHA}"
         with:
           python-version: "3.10"
