--- a/action.yml
+++ b/action.yml
@@ -4,26 +4,30 @@ description: Check that the code follows Visium's python style guidelines
 inputs:
   python-version:
     required: true
+    description: The python version to use for the check
 
 jobs:
+  ci:
+    using: "composite"
+    steps:
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ inputs.python-version }}
 
-runs:
-  using: 'composite'
-  steps:
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ inputs.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip instll visiumlint
+        shell: bash
+      
+      - name: Overwrite the pyproject.toml if it exists
+        run: |
+          python -m pip install --upgrade pip
+          pip instll visiumlint
+        shell: bash
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install pipenv
-        pipenv install --dev --system --deploy
-      shell: bash
-
-    - name: Check linting with visiumlint
-      run: |
-        visiumlint
-      shell: bash
-
+      - name: Check linting with visiumlint
+        run: |
+          visiumlint
+        shell: bash
