--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,6 @@ on:
 
 jobs:
   check-python-style:
-    uses: ./workflow.yml
+    uses: ././github/workflows/workflow.yml
     with:
       python-version: 3.11
