fixed the overwriting of pyproject.toml

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Overwrite the pyproject.toml if it exists
         run: |
-          rm -r pyproject.toml
+          rm -f pyproject.toml
           echo "[tool.black]
           line-length = 120
 
