--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   check-python-style:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
@@ -26,30 +27,29 @@ jobs:
       - name: Overwrite the pyproject.toml if it exists
         run: |
           rm -f pyproject.toml
-          echo "[tool.black]
+          echo '[tool.black]
           line-length = 120
 
           [tool.isort]
-          profile = \"black\"
+          profile = "black"
           line_length = 120
 
           [tool.pylint.master]
-          load-plugins = \"pylint.extensions.docparams, pylint.extensions.docstyle\"
+          load-plugins = "pylint.extensions.docparams, pylint.extensions.docstyle"
 
           [tool.pylint.messages_control]
-          disable = \"\"\"fixme,
-          too-few-public-methods,\"\"\"
+          disable = """fixme, too-few-public-methods,"""
 
           [tool.pylint.basic]
-          variable-rgx = \"^[a-z][a-z0-9_]*$\"
-          argument-rgx = \"^[a-z][a-z0-9_]*$\"
+          variable-rgx = "^[a-z][a-z0-9_]*$"
+          argument-rgx = "^[a-z][a-z0-9_]*$"
 
           [tool.pylint.format]
-          max-line-length = \"120\"
+          max-line-length = "120"
 
           [tool.pydocstyle]
-          add-ignore = \"D107, D104, D103\"
-          convention = \"google\"" > pyproject.toml
+          add-ignore = "D107, D104, D103"
+          convention = "google"' > pyproject.toml
         shell: bash
 
       - name: Check linting with visiumlint
@@ -57,4 +57,3 @@ jobs:
           visiumlint
           echo "Visium Python Style Check Passed"
         shell: bash
-      
