--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,7 +21,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install visiumlint
+          pip install pipenv
+          pipenv intall --dev
         shell: bash
 
       - name: Overwrite the pyproject.toml if it exists
