--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -22,7 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
-          pipenv intall --dev
+          pipenv install --dev
         shell: bash
 
       - name: Overwrite the pyproject.toml if it exists
