--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -55,6 +55,6 @@ jobs:
 
       - name: Check linting with visiumlint
         run: |
-          visiumlint
+          pipenv run visiumlint
           echo "Visium Python Style Check Passed"
         shell: bash
